add difficulty edit in mod menu
